<resources>
    <string name="app_name">Task Automator</string>
    <string name="action_settings">Settings</string>
    <string name="action_SMS">SMS Scheduling</string>
    <string name="action_ringer">Ringer Mode Scheduling</string>
    <string name="action_brightness">Brightness Scheduling</string>
    <string name="action_geofencing">Geofencing Scheduling</string>
    <string name="action_weather">Weather</string>
    <string name="action_readSMS">Read SMS</string>

    <string name="action_delete_all">Delete All Geofences</string>

    <!-- Dialogs -->
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <!-- Button -->
    <string name="Button.DeleteGeofence">DELETE</string>

    <!-- Labels -->
    <string name="Label.Name">Name</string>
    <string name="Label.Latitude">Latitude</string>
    <string name="Label.Longitude">Longitude</string>
    <string name="Label.Radius">Radius</string>
    <string name="Label.AddGeofence">Add a Geofence</string>
    <string name="Label.EmptyState">You haven\'t created any geofences yet. Tap the plus button to create one.\n\n\nWill we ever get there?! :]</string>

    <!-- Hints -->
    <string name="Hint.Name">Name for the geofence</string>
    <string name="Hint.Latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
    <string name="Hint.Longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
    <string name="Hint.Radius" formatted="false">Radius (%3.2f to %3.1f km)</string>

    <!-- Units -->
    <string name="Units.Degrees">\u00B0</string>
    <string name="Units.Kilometers">km</string>

    <!-- Notification -->
    <string name="Notification.Title">Location Notification</string>
    <string name="Notification.Text">We\'re at %1$s!!!</string>

    <!-- Toast -->
    <string name="Toast.Validation">Please enter valid data for all fields</string>
    <string name="Toast.Error">There was an error. Please try again.</string>

    <string name="start_text">Start Alarm</string>
    <string name="cancel_text">Cancel Alarm</string>
    <string name="doodle_alert">Doodle Alert</string>
    <string name="doodle_found">There is a Google doodle today!!</string>
    <string name="no_doodle">No Google doodle today.</string>
    <string name="connection_error">Connection error.</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_sms_scheduling_acivity">SmsSchedulingAcivity</string>
    <string name="title_activity_ringer_scheduling">RingerSchedulingActivity</string>
    <string name="title_activity_brightness_scheduling">BrightnessSchedulingActivity</string>
    <string name="title_activity_geofencing">GeofencingActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_unmute_by_sms">UnmuteBySmsActivity</string>
    <string name="title_activity_email">EmailActivity</string>
</resources>
