<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mayankattri.mc_project_2.MainActivity">

    <item
        android:id="@+id/MI_SMS"
        android:orderInCategory="100"
        android:title="@string/action_SMS"
        app:showAsAction="never" />

    <item
        android:id="@+id/MI_ringer"
        android:orderInCategory="200"
        android:title="@string/action_ringer"
        app:showAsAction="never" />

    <item
        android:id="@+id/MI_brightness"
        android:orderInCategory="300"
        android:title="@string/action_brightness"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all"
        android:orderInCategory="400"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="500"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/MI_geofencing"
        android:orderInCategory="450"
        android:title="@string/action_geofencing"
        app:showAsAction="never" />

    <item
        android:id="@+id/MI_weather"
        android:orderInCategory="600"
        android:title="@string/action_weather"
        app:showAsAction="never" />

    <item
        android:id="@+id/MI_readSMS"
        android:orderInCategory="600"
        android:title="@string/action_readSMS"
        app:showAsAction="never" />

</menu>
